--- a/src/app/parking-lot/parking-list/parking-list.component.html
+++ b/src/app/parking-lot/parking-list/parking-list.component.html
@@ -60,245 +60,25 @@
     <table class="table table-hover">
       <thead>
         <tr>
-          <th scope="col">Cell</th>
-          <th scope="col">Cell Status</th>
-          <th scope="col">Cell Space</th>
+          <!-- <th scope="col">Cell</th> -->
           <th scope="col">Vehicle Plate</th>
           <th scope="col">vehicle Type</th>
+          <th scope="col">Cell Space</th>
+          <th scope="col">Cell Status</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
-        <tr>
-          <th scope="row">111</th>
-          <td>Free</td>
-          <td>Big</td>
-          <td>xyz</td>
-          <td>Motorcicle</td>
-        </tr>
+        <tr *ngFor="let vehicle of vehicles | async">
+          <td>{{vehicle.plaque}}</td>
+          <td>{{vehicle.type}}</td>
+          <td>{{vehicle.space}}</td>   
+          <td>
+            <div class="btn-group">
+              <button (click)="delete(vehicle.plaque)" class="btn btn-danger btn-sm">
+                <em class="fa fa-times"></em>
+              </button>
+            </div>
+          </td>       
       </tbody>
     </table>
   </div>
