--- a/src/app/parking-lot/create-vehicle/create-vehicle.component.html
+++ b/src/app/parking-lot/create-vehicle/create-vehicle.component.html
@@ -27,8 +27,8 @@
           Please enter the Space">
           </em>
           <select class="form-control" id="Space" formControlName="space">
-            <option value="small">small</option>
-            <option value="medium">medium</option>
+            <option value="small" *ngIf="vehicleType=='Motocycle'">small</option>
+            <option value="medium" *ngIf="vehicleType!='Truck'">medium</option>
             <option value="big">big</option>
           </select>
         </div>
