--- a/src/app/parking-lot/create-vehicle/create-vehicle.component.html
+++ b/src/app/parking-lot/create-vehicle/create-vehicle.component.html
@@ -1,50 +1,37 @@
-<div class="container-fluid p-5">
-  <div class="card p-5">
-    <h2 class="text-center">Create New Vehicle</h2>
-    <div class="card-body">
-      <form [formGroup]="form" #frmVehicle="ngForm" id="frmVehicle" novalidate (ngSubmit)="onSaveVehicle()">
-        <div class="form-group">
-          <label class="mr-2">Vehicle Plate</label>
-          <em class="far fa-question-circle" data-toggle="tooltip" data-placement="right" title="
-          Please enter the license plate">
-          </em>
-          <input type="text" class="form-control" id="Plate" placeholder="XYZ123" formControlName="plaque">
-        </div>
-        <div class="form-group">
-          <label class="mr-2">vehicle Type</label>
-          <em class="far fa-question-circle" data-toggle="tooltip" data-placement="right" title="
-          Please enter the vehicle Type">
-          </em>
-          <select class="form-control" id="Type" formControlName="type">
-            <option value="Motocycle">Motocycle</option>
-            <option value="Sedan">Sedan</option>
-            <option value="Truck">Truck</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label class="mr-2">Space</label>
-          <em class="far fa-question-circle" data-toggle="tooltip" data-placement="right" title="
-          Please enter the Space">
-          </em>
-          <select class="form-control" id="Space" formControlName="space">
-            <option value="small" *ngIf="vehicleType=='Motocycle'">small</option>
-            <option value="medium" *ngIf="vehicleType!='Truck'">medium</option>
-            <option value="big">big</option>
-          </select>
-        </div>
-      </form>
-    </div>
-    <div class="form-group buttons-group">
-      <div class="btn-group">
-        <button type="button" (click)="onBack()" class="btn btn-secondary btn-sm">
-          <i class="fa fa-arrow-left"></i> Back
-        </button>
-        <button type="button" (click)="reset()" *ngIf="mode > 0" class="btn btn-danger btn-sm">
-          <i class="fa fa-undo"></i> Reset
-        </button>
-      </div>
-      <!-- <button type="submit" class="btn btn-primary" [disabled]="!form.get('Password').valid || !form.get('UserName').valid">Save user</button> -->
-      <button type="submit" class="btn btn-outline-primary" (click)='onSaveVehicle()'>Add Vehicle</button>
-    </div>
-  </div>
-</div>
+<mat-card fxLayout fxLayoutAlign="center center" [ngStyle]="{'width': '44%'}">
+<form [formGroup]="form" #frmVehicle="ngForm" id="frmVehicle" novalidate (ngSubmit)="onSaveVehicle()">
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Vehicle Plaque</mat-label>
+    <input matInput id="vehicleID" placeholder="XYZ123" formControlName="vehicleID">
+    <mat-error *ngIf="vehicleID.hasError('required')">      
+      You must enter the license plate
+    </mat-error>
+    <mat-error *ngIf="vehicleID.hasError('duplicatedID')">      
+      Ya existe
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field appearance="outline" class="full-width" >
+    <mat-label>Select vehicle type</mat-label>
+    <mat-select id="Type" formControlName="type">
+      <mat-option value="Motocycle">Motocycle</mat-option>
+      <mat-option value="Sedan">Sedan</mat-option>
+      <mat-option value="Truck">Truck</mat-option>
+    </mat-select>
+    <mat-error *ngIf="type.hasError('required')">      
+      You must select vehicle type
+    </mat-error>
+  </mat-form-field>
+  <mat-form-field appearance="outline" class="full-width">
+    <mat-label>Select Space</mat-label>
+    <mat-select id="space" formControlName="space">
+      <mat-option value="small" *ngIf="vehicleType=='Motocycle'">small</mat-option>
+      <mat-option value="medium" *ngIf="vehicleType!='Truck'">medium</mat-option>
+      <mat-option value="big">big</mat-option>
+    </mat-select>
+    <mat-error *ngIf="space.hasError('required')">      
+      You must select vehicle space
+    </mat-error>
+  </mat-form-field>
+  <button mat-raised-button [disabled]="!form.valid" color="primary" (click)='onSaveVehicle()'>Add Vehicle</button>
+</form>
+</mat-card>
