--- a/src/app/parking-lot/create-vehicle/create-vehicle.component.scss
+++ b/src/app/parking-lot/create-vehicle/create-vehicle.component.scss
@@ -1,4 +1,9 @@
-.card{
-    box-shadow: 5px 2px 9px 2px #808080b0;
-    border-radius: 12px;
-}
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .full-width {
+    width: 100%;
+  }
