--- a/src/app/parking-lot/parking-list/parking-list.component.html
+++ b/src/app/parking-lot/parking-list/parking-list.component.html
@@ -1,22 +1,22 @@
-<div class="no-gutters row">
+<!-- <div class="no-gutters row">
   <div class="row">
     <div class="col-12 col-lg-6 col-xl-3">
-    <button class="widget widget-tile" routerLink="/list/create">
-          <div class="chart sparkline icon" id="spark3">
-            <em  class="fas fa-car"></em>
+      <button class="widget widget-tile" routerLink="/list/create">
+        <div class="chart sparkline icon" id="spark3">
+          <em class="fas fa-car"></em>
+        </div>
+        <div class="data-info">
+          <div class="desc">Impressions</div>
+          <div class="value"><span class="indicator indicator-positive mdi mdi-chevron-up"></span><span class="number"
+              data-toggle="counter" data-end="532">532</span>
           </div>
-          <div class="data-info">
-            <div class="desc">Impressions</div>
-            <div class="value"><span class="indicator indicator-positive mdi mdi-chevron-up"></span><span class="number"
-                data-toggle="counter" data-end="532">532</span>
-            </div>
-          </div>
+        </div>
       </button>
     </div>
     <div class="col-12 col-lg-6 col-xl-3">
       <div class="widget widget-tile">
         <div class="chart sparkline icon" id="spark3">
-          <em  class="fas fa-car"></em>
+          <em class="fas fa-car"></em>
         </div>
         <div class="data-info">
           <div class="desc">Impressions</div>
@@ -29,7 +29,7 @@
     <div class="col-12 col-lg-6 col-xl-3">
       <div class="widget widget-tile">
         <div class="chart sparkline icon" id="spark3">
-          <em  class="fas fa-car"></em>
+          <em class="fas fa-car"></em>
         </div>
         <div class="data-info">
           <div class="desc">Impressions</div>
@@ -42,7 +42,7 @@
     <div class="col-12 col-lg-6 col-xl-3">
       <div class="widget widget-tile">
         <div class="chart sparkline icon" id="spark3">
-          <em  class="fas fa-car"></em>
+          <em class="fas fa-car"></em>
         </div>
         <div class="data-info">
           <div class="desc">Impressions</div>
@@ -52,17 +52,16 @@
         </div>
       </div>
     </div>
-    
-  </div>
 
-  <div class="container">
+  </div>  -->
+
+<!-- <div class="container">
     <h3 class="mb-5 mt-3">Dashboard</h3>
     <div class="row">
       <div class="col-8">
         <table class="table table-hover">
           <thead>
             <tr>
-              <!-- <th scope="col">Cell</th> -->
               <th scope="col">Vehicle Plate</th>
               <th scope="col">vehicle Type</th>
               <th scope="col">Cell Space</th>
@@ -73,14 +72,14 @@
             <tr *ngFor="let vehicle of vehicles | async">
               <td>{{vehicle.plaque}}</td>
               <td>{{vehicle.type}}</td>
-              <td>{{vehicle.space}}</td>   
+              <td>{{vehicle.space}}</td>
               <td>
                 <div class="btn-group">
                   <button (click)="delete(vehicle.plaque)" class="btn btn-danger btn-sm">
                     <em class="fa fa-times"></em>
                   </button>
                 </div>
-              </td>       
+              </td>
           </tbody>
         </table>
       </div>
@@ -97,16 +96,93 @@
             <tr *ngFor="let vehicle of vehicles2 | async">
               <td>{{vehicle.plaque}}</td>
               <td>{{vehicle.type}}</td>
-              <td>{{vehicle.space}}</td>   
+              <td>{{vehicle.space}}</td>
               <td>
                 <div class="btn-group">
                   <button (click)="delete(vehicle.plaque)" class="btn btn-danger btn-sm">
                     <em class="fa fa-times"></em>
                   </button>
                 </div>
-              </td>       
+              </td>
           </tbody>
         </table>
       </div>
     </div>
-  </div>
+  </div>  -->
+
+<button routerLink="/list/create">crear</button>
+<div fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center center" fxLayoutGap="32px">
+  <mat-card [ngStyle]="{'width': '44%' }">
+    <mat-table #table [dataSource]="vehicles">
+      <ng-container matColumnDef="Plaque">
+        <mat-header-cell *matHeaderCellDef>
+          Plaque
+        </mat-header-cell>
+        <mat-cell *matCellDef="let vehicle">
+          {{vehicle.vehicleID}}
+        </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Type">
+        <mat-header-cell *matHeaderCellDef>
+          Type
+        </mat-header-cell>
+        <mat-cell *matCellDef="let vehicle">
+          {{vehicle.type}}
+        </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Space">
+        <mat-header-cell *matHeaderCellDef>
+          Space
+        </mat-header-cell>
+        <mat-cell *matCellDef="let vehicle">
+          {{vehicle.space}}
+        </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Actions">
+        <mat-header-cell *matHeaderCellDef>
+          Actions
+        </mat-header-cell>
+        <mat-cell *matCellDef="let vehicle">
+          <div>
+            <button (click)="delete(vehicle.vehicleID)">
+              <em class="material-icons">delete_outline</em>
+            </button>
+          </div>
+        </mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns:displayedColumns"></mat-row>
+    </mat-table>
+  </mat-card>
+  <mat-card [ngStyle]="{'width': '44%' }">
+    <mat-table #table1 [dataSource]="vehiclesWaiting">
+      <ng-container matColumnDef="Plaque">
+        <mat-header-cell *matHeaderCellDef>
+          Plaque
+        </mat-header-cell>
+        <mat-cell *matCellDef="let vehicle">
+          {{vehicle.vehicleID}}
+        </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Type">
+        <mat-header-cell *matHeaderCellDef>
+          Type
+        </mat-header-cell>
+        <mat-cell *matCellDef="let vehicle">
+          {{vehicle.type}}
+        </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Space">
+        <mat-header-cell *matHeaderCellDef>
+          Space
+        </mat-header-cell>
+        <mat-cell *matCellDef="let vehicle">
+          {{vehicle.space}}
+        </mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumnswait"></mat-header-row>
+      <mat-row *matRowDef="let row; columns:displayedColumnswait"></mat-row>
+    </mat-table>
+  </mat-card>
+
+</div>
