--- a/src/app/parking-lot/create-vehicle/create-vehicle.component.scss
+++ b/src/app/parking-lot/create-vehicle/create-vehicle.component.scss
@@ -1,9 +1,6 @@
-.example-form {
-    min-width: 150px;
-    max-width: 500px;
-    width: 100%;
+  mat-card.cardNew{
+    margin: 0 auto;
+    border-radius: 15px;
+    box-shadow: 1px 4px 4px 3px #8080809e;
   }
-  
-  .full-width {
-    width: 100%;
-  }
+
