--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,9 +1,6 @@
-
-mat-sidenav-container{
-    mat-sidenav-content{
-        mat-sidenav {
-            height: 100%;
-        }
-    } 
+.mat-toolbar.mat-primary {
+    background: #ececeb54;
+    box-shadow: 4px 3px 10px 1px #808080bd;
+    color: black;
 }
- 
+
